introduce readItem permission outside of operation and with possibility to use currentState (e.g for delete)
